updated ionic project

--- a/newIonic/src/app/pages/tabs/tabs.page.html
+++ b/newIonic/src/app/pages/tabs/tabs.page.html
@@ -8,6 +8,7 @@
     
     <ion-tab-button tab="cart">
       <ion-icon name="cart-outline"></ion-icon>
+      <span class="itemCount">{{numCartItems}}</span>
       <ion-label>Cart</ion-label>
     </ion-tab-button>
 
